enable syslog flushing for docker-compose

--- a/conf/wrapper.conf
+++ b/conf/wrapper.conf
@@ -98,7 +98,10 @@ wrapper.logfile.maxsize=0
 wrapper.logfile.maxfiles=0
 
 # Log Level for sys/event log output.  (See docs for log levels)
-wrapper.syslog.loglevel=NONE
+wrapper.syslog.loglevel=INFO
+wrapper.syslog.split_messages=TRUE
+wrapper.console.flush=TRUE
+
 
 #********************************************************************
 # Wrapper Windows Properties
